--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
   border: none;
 }
 .search-box {
-  border: 1px solid rgb(3, 118, 211);
+  border: 1px solid #398439;
   width: 281px;
   border-radius: 5px;
   margin: auto;
@@ -23,7 +23,21 @@ body {
 .search-button {
   padding: 10px 50px;
   border-radius: 25px;
-  margin-left: 20px;
+  margin-left: 25px;
+  
+}
+.span-area
+{
+  margin: 20px 0;
+}
+.span{
+  border: 1px solid rgb(248, 163, 5);
+  padding: 10px;
+  font-size: 14px;
+  font-weight: 500;
+  border-radius:10px;
+ 
+ 
 }
 #all-products {
   display: grid;
@@ -38,6 +52,8 @@ body {
 .single-product {
   padding: 10px;
   transition: 0.6s;
+  background-color:rgba(196, 170, 137, 0.418);
+  margin: 10px;
 }
 .single-product:hover {
   box-shadow: 4px 4px 7px gray;
@@ -56,9 +72,23 @@ body {
   border-radius: 5px;
   margin-right: 30px;
   position: fixed;
+  
 }
 .cart-main {
   padding-right: 30px;
+}
+#details-area {
+  
+  /* border: 1px solid black; */
+  text-align: center;
+  
+  margin:0 auto;
+  align-items: center;
+  justify-content: center;
+}
+.text
+{
+  margin: 20px 0;
 }
 @media only screen and (max-width: 768px) {
   #all-products {
