--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ body {
   /* border: 1px solid black; */
   text-align: center;
   
-  margin:0 auto;
+  margin:100px auto;
   align-items: center;
   justify-content: center;
 }
